--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Redux App",
+  "name": "Redux_App",
   "version": "1.0.0",
   "description": "Redux App",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch",
+    "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch"
   },
